[package]
name = "KYT-Know Your Target"
version = "1.0.0"
edition = "2026"
authors = ["Vedant"]
description = "Password auditing persona-based generator"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
indicatif = "0.17"
regex = "1.10"
anyhow = "1.0"